Edit Delete Display

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,7 +28,7 @@
 			<div class="card col-sm-6">
 				<div class="card-header">Country</div>
 				<div class="card-body">
-					<form action="country" method="post">
+					<form action="country" method="post" onsubmit="alert('Record Inserted');">
 						<div class="form-group">
 							<label for="country">Country</label> <input type="text" name="country"
 								class="form-control" placeholder="Which country do you live in??" id="country">
@@ -37,7 +37,7 @@
 					</form>
 				</div>
 				<div class="card-footer">
-					<a href="information.jsp">See all details</a>
+					<a href="info">See all details</a>
 				</div>
 			</div>
 			<div class="col-sm-3"></div>
